dhall/tests/type-inference/failure/unit/MergeAnnotationMismatch.txt
Type error: error: MergeAnnotMismatch
 --> <current file>:1:0
  |
1 | merge { x = 0 } < x >.x : Bool
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ MergeAnnotMismatch
  |
